// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Diff Command > passes diff exclude globs configured with --ignore-changes 1`] = `
diff --git a/packages/package-1/package.json b/packages/package-1/package.json
index SHA..SHA 100644
--- a/packages/package-1/package.json
+++ b/packages/package-1/package.json
@@ -1,5 +1,5 @@
 {
   "name": "package-1",
-  "changed": 0,
+  "changed": 1,
   "version": "1.0.0"
 }
\\ No newline at end of file
`;

exports[`Diff Command > should diff a specific package 1`] = `
diff --git a/packages/package-2/package.json b/packages/package-2/package.json
index SHA..SHA 100644
--- a/packages/package-2/package.json
+++ b/packages/package-2/package.json
@@ -1,6 +1,6 @@
 {
   "name": "package-2",
-  "changed": 0,
+  "changed": 1,
   "version": "1.0.0",
   "dependencies": {
     "package-1": "^1.0.0"
`;

exports[`Diff Command > should diff packages from the first commit 1`] = `
diff --git a/packages/package-1/package.json b/packages/package-1/package.json
index SHA..SHA 100644
--- a/packages/package-1/package.json
+++ b/packages/package-1/package.json
@@ -1,5 +1,5 @@
 {
   "name": "package-1",
-  "changed": 0,
+  "changed": 1,
   "version": "1.0.0"
 }
\\ No newline at end of file
`;

exports[`Diff Command > should diff packages from the first commit from DiffCommand class 1`] = `
diff --git a/packages/package-1/package.json b/packages/package-1/package.json
index SHA..SHA 100644
--- a/packages/package-1/package.json
+++ b/packages/package-1/package.json
@@ -1,5 +1,5 @@
 {
   "name": "package-1",
-  "changed": 0,
+  "changed": 1,
   "version": "1.0.0"
 }
\\ No newline at end of file
`;

exports[`Diff Command > should diff packages from the first commit from factory 1`] = `
diff --git a/packages/package-1/package.json b/packages/package-1/package.json
index SHA..SHA 100644
--- a/packages/package-1/package.json
+++ b/packages/package-1/package.json
@@ -1,5 +1,5 @@
 {
   "name": "package-1",
-  "changed": 0,
+  "changed": 1,
   "version": "1.0.0"
 }
\\ No newline at end of file
`;

exports[`Diff Command > should diff packages from the most recent tag 1`] = `
diff --git a/packages/package-1/package.json b/packages/package-1/package.json
index SHA..SHA 100644
--- a/packages/package-1/package.json
+++ b/packages/package-1/package.json
@@ -1,5 +1,6 @@
 {
   "name": "package-1",
   "changed": 1,
-  "version": "1.0.0"
+  "version": "1.0.0",
+  "sinceLastTag": true
 }
\\ No newline at end of file
`;
